--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="slicknav.css">
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script src="js/jquery.slicknav.min.js"></script>
+	<script src="jquery.slicknav.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$('#nav_menu').slicknav({prependTo:"#mobile_menu"});
@@ -20,7 +20,7 @@
 
 <body>
 <header>
-	<img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
+	<img src="town_hall_logo.gif" alt="Town Hall logo" height="80">
 	<h2>San Joaquin Valley Town Hall</h2>
 	<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 </header>
